Messed around with trying to get the numbers in there, but I cannot figure it out for the life of me. Rather discouraging

--- a/index.html
+++ b/index.html
@@ -15,14 +15,26 @@
     <main>
         <section class="maincard">
             <div class="leftcard">
-                <h4>step 1</h4>
-                <h3>your info</h3><br>
-                <h4>step 2</h4>
-                <h3>select plan</h3><br>
-                <h4>step 3</h4>
-                <h3>add-ons</h3><br>
-                <h4>step 4</h4>
-                <h3>summary</h3>
+                <div id="margin">
+                    <!-- <p class="numbers">1</p> -->
+                    <!-- <img src="./1.png" class="img1"> -->
+                    <h4>step 1</h4>
+                    <h3>
+                        <!-- <span class="numbers">1</span> -->
+                        your info</h3><br>
+                </div>
+                <div>
+                    <h4>step 2</h4>
+                    <h3>select plan</h3><br>
+                </div>
+                <div>
+                    <h4>step 3</h4>
+                    <h3>add-ons</h3><br>
+                </div>
+                <div>
+                    <h4>step 4</h4>
+                    <h3>summary</h3>
+                </div>
                 <img src="./graphic.png">
             </div>
             <div class="infocard">
